Fix Necromancer selection on mobile

--- a/src/assets/css/Layouts.css
+++ b/src/assets/css/Layouts.css
@@ -478,8 +478,8 @@
     .hero-icon-container .hero-select-icon[data-career='19'] {
         background: url('../images/heroes/19/portrait-wide.png') right / contain, url('../images/backgrounds/background29.png');
     }
-    .hero-select-icon[data-career='20'] {
-        display: none;
+    .hero-icon-container .hero-select-icon[data-career='20'] {
+        background: url('../images/heroes/20/portrait-wide.png') right / contain, url('../images/backgrounds/background29.png');
     }
     .hero-container {
         box-shadow: -1px 0 0 0 #564640;
